style.css
/* 
========
Variables
========
*/

:root {
    --backgroundColor: rgb(245, 245, 245);
    --backgroundColorTwo: rgb(0, 0, 0);
    --hoverColor: rgb(180, 226, 255);
    --primaryColor: rgba(0, 0, 0, 0.85);
    --secondaryColor: rgb(30, 169, 255);
    --primaryFont: Calibri, Verdana, sans-serif;
    --slowTransition: all 0.72s linear;
    --transition: all 0.5s linear;
    --fastTransition: all 0.25s linear;
}





/* 
========
Global Styles
========
*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: var(--backgroundColor);
    color: var(--primaryColor);
    font-family: var(--primaryFont);
    font-size: 1.25rem;
    font-weight: 400;
    line-height: 1.5;
    color: var(--secondaryColor);
}

ul {
    list-style-type: none;
}

a {
    text-decoration: none;
}





/* 
========
Header/HeroImg/Menu
========
*/

@media only screen and (min-width: 320px) {
    #hero-img {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        text-align: center;

        height: 105vh;
        font-size: 1.75rem;
        background-color: var(--backgroundColorTwo);
        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.45)),
            url('./images/pexels-hitarth-jadhav-220357.jpg') center/cover no-repeat;
    }

    /* remember to use gap property instead of margin if possible on the other media queries */
    #hero-img p {
        margin-bottom: 10vh;
    }

    #hero-img h2,
    #hero-img p {
        background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8))
    }

    #hero-img button {
        /* background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)); */
        background-color: rgba(0, 0, 0, 0.8);
        border: 2px solid var(--secondaryColor);
        border-radius: 3px;

        font-size: 1.25rem;
        color: var(--backgroundColor);
        padding: 0.5rem 1rem;
    }

    #hero-img button:active {
        background-color: var(--hoverColor);
        color: var(--backgroundColorTwo);
        border: 1px solid var(--secondaryColor);
    }

    #hero-img button:visited {
        background-color: rgba(0, 0, 0, 0.8);
    }

    header {
        display: flex;
        justify-content: space-around;
        align-items: center;

        position: -webkit-sticky;
        position: sticky;
        top: 0;

        background-color: var(--backgroundColorTwo);
        height: 10vh;
        font-size: 1rem;
        margin-bottom: 10vh;
    }

    header h1 {
        margin-right: 15vw;
    }

    header nav {
        min-width: 50vw;
    }

    .nav-list {
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
        align-items: center;
        height: 80vh;
    }

    .nav-list li {
        font-size: 2rem;
        transition: var(--transition);
        cursor: pointer;
        color: var(--hoverColor);
        border-bottom: 1px solid beige;
        width: 50vw;
    }

    .nav-list li:hover {
        transition: var(--fastTransition);
        color: var(--secondaryColor);
    }

    /* needed class for nav to do flex */
    .navbar {
        display: flex;
        justify-content: flex-end;
    }

    #navicon {
        margin-top: 1.25vh;
        margin-right: 2.5vw;
        /*
        margin-right helps on smaller screens when navicon is changing positions to not have width scroll bar appear since the navicon is so close to the edge 
        */
        cursor: pointer;
        transition: var(--slowTransition);
    }

    /* 
    the #navicon:active is not needed but it makes the transition a little bit more smoother 
    */
    .active,
    #navicon:active {
        transform: rotate(90deg);
        transition: var(--transition);
        z-index: 1;
    }

    .menu {
        width: 100vw;
        height: 90vh;
        background-color: rgba(0, 0, 0, 0.90);
        display: block;
        position: absolute;
        margin-top: 100vh;
        /*
        always 10vh more than height to get bottom of the navbar placement
        */
        -webkit-animation-name: slide-menu;
        animation-name: slide-menu;
        -webkit-animation-duration: 0.75s;
        animation-duration: 0.75s;
    }

    .menu-close {
        width: 100vw;
        height: 90vh;
        background-color: rgba(0, 0, 0, 0.90);
        display: block;
        position: absolute;
        margin-top: 100vh;

        -webkit-animation-name: slide-menu-close;
        animation-name: slide-menu-close;
        -webkit-animation-direction: reverse;
        animation-direction: reverse;
        -webkit-animation-duration: 0.75s;
        animation-duration: 0.75s;

        /*
        this sets the menu scale to zero meaning it cannot be seen after the transition is finished above
        */
        transform: scale(0);
    }

    @-webkit-keyframes slide-menu {
        from {
            transform: translateX(-100vw);
        }

        /* note that the animation moves the menu to cover the width of the device! */
        to {
            transform: translateX(0vw);
        }
    }

    @-webkit-keyframes slide-menu {
        from {
            transform: translateX(-100vw);
        }

        /* note that the animation moves the menu to cover the width of the device! */
        to {
            transform: translateX(0vw);
        }
    }

    @keyframes slide-menu {
        from {
            transform: translateX(-100vw);
        }

        /* note that the animation moves the menu to cover the width of the device! */
        to {
            transform: translateX(0vw);
        }
    }

    @-webkit-keyframes slide-menu-close {
        from {
            transform: translateX(-100vw);
        }

        /* note that the animation moves the menu to cover the width of the device! */
        to {
            transform: translateX(0vw);
        }
    }

    @keyframes slide-menu-close {
        from {
            transform: translateX(-100vw);
        }

        /* note that the animation moves the menu to cover the width of the device! */
        to {
            transform: translateX(0vw);
        }
    }

    /* set viewheight to current viewing material and cut off everything else to have no scroll */
    .menu-scroll-stop {
        height: 100%;
        overflow: hidden;
    }

    /* the javascript scrollIntoView does not scroll all the way to the top of the header, so this adds additional viewheight to the scrollIntoView javascript code by adding this as a class to the element */
    .scroll-to-header {
        scroll-snap-margin-top: 18.9vh;
        scroll-margin-top: 18.9vh;
    }
}

@media only screen and (min-width: 720px) {
    #hero-img button {
        font-size: 1.5rem;
    }

    header {
        height: 10vh;
        font-size: 1.25rem;
    }

    .nav-list {
        display: none;
    }

    #navicon {
        display: none;
    }
}

@media only screen and (min-width: 1024px) {
    #hero-img {
        font-size: 2rem;
    }

    #hero-img button {
        font-size: 1.5rem
    }
}

@media only screen and (min-width: 1280px) {
    #hero-img {
        font-size: 2.5rem;
    }

    header {
        font-size: 1.5rem;
    }

    header nav {
        min-width: 50vw;
    }

    header nav ul {
        justify-content: space-between;
    }

    #hero-img button:hover {
        background-color: var(--secondaryColor);
        cursor: pointer;
    }

    #hero-img button:active {
        background-color: var(--hoverColor);
        color: var(--backgroundColorTwo);
        border: 1px solid var(--secondaryColor);
    }
}





/* 
========
About
========
*/

@media only screen and (min-width: 320px) {

    /* adjusted the rotation here with margins so the#navicon button can be clicked without having the rotation interfere with the click */
    .about {
        color: var(--backgroundColor);
        font-size: 2rem;
        text-align: center;
        width: 50%;

        background-color: var(--primaryColor);
        border-radius: 7px;
        margin: 5vh auto;
    }

    .article-about {
        display: flex;
        flex-direction: column;
        align-items: center;
        margin: 5vh 5vw 0vh;
        row-gap: 5vh;
    }

    .article-about p {
        width: 75vw;
        text-align: start;
        font-size: 1.35rem;
    }

    .profile-img {
        border-radius: 50%;
        height: auto;
        width: 40%;
    }
}

@media only screen and (min-width: 720px) {
    .about {
        width: 35%;
    }

    .article-about {
        display: flex;
        justify-content: space-around;
        margin-top: 2.5rem;
    }

    .article-about p {
        width: 65vw;
        font-size: 1.35rem;
        margin-left: 5vw;
        text-align: justify;
    }

    .profile-img {
        margin: 0 5rem;
        justify-self: center;
        align-self: center;
        width: 30%;
    }
}

@media only screen and (min-width: 1024px) {
    .about {
        width: 25%;
    }

    .article-about {
        margin-top: 4rem;
    }

    .article-about p {
        font-size: 1.6rem;
    }

    .profile-img {
        width: 25%;
    }
}

@media only screen and (min-width: 1280px) {
    .about {
        margin-top: 10vh;
    }

    .article-about p {
        width: 50vw;
    }

    .profile-img {
        width: 20%;
    }
}





/* 
========
Skills
========
*/

@media only screen and (min-width: 320px) {
    #skills {
        color: var(--backgroundColor);
        font-size: 2rem;
        margin: 10vh 25vw 5vh;
        text-align: center;

        background-color: var(--primaryColor);
        border-radius: 7px;
    }
}

@media only screen and (min-width: 720px) {
    .section-skills {
        display: none;
    }
}

@media only screen and (min-width: 1024px) {}

@media only screen and (min-width: 1280px) {}





/* 
========
Projects
========
*/

@media only screen and (min-width: 320px) {
    .projects {
        color: var(--backgroundColor);
        font-size: 2rem;
        width: 50%;
        text-align: center;

        background-color: var(--primaryColor);
        border-radius: 7px;
        margin: 5vh auto;
    }

    .article-projects {
        display: flex;
        justify-content: center;
        transform: scale(0.7, 0.7);
    }

    .article-projects a:hover {
        border: 1px solid black;
    }
}

/* need to make length of the projects bar the same as the about */
@media only screen and (min-width: 720px) {
    .projects {
        width: 35%;
    }

    /* .article-projects {
        transform: scale(0.8, 0.8);
    } */
}

@media only screen and (min-width: 1024px) {
    .projects {
        width: 25%;
    }
}

@media only screen and (min-width: 1280px) {}





/* 
========
Contact
========
*/

@media only screen and (min-width: 320px) {
    .contact {
        color: var(--backgroundColor);
        font-size: 2rem;
        width: 50%;
        text-align: center;

        background-color: var(--primaryColor);
        border-radius: 7px;
        margin: 5vh auto;

    }
}

@media only screen and (min-width: 720px) {
    .contact {
        width: 35%;
    }
}

@media only screen and (min-width: 1024px) {
    .contact {
        width: 25%;
    }
}

@media only screen and (min-width: 1280px) {}





/* 
========
Footer
========
*/

footer {
    display: flex;
    background-color: var(--backgroundColorTwo);
    height: 10vh;
}

footer p {
    font-size: 0.75rem;
    width: 50vw;
    margin-left: 5vw;
    align-self: center;
}

footer ul {
    display: flex;
    justify-content: space-around;
    align-items: center;

    font-size: 1.5rem;
    width: 25vw;
    margin-left: 15vw;
}

footer ul li a {
    color: var(--secondaryColor);
}

footer ul li a:hover {
    color: var(--hoverColor);
}

footer ul li a:active {
    color: var(--secondaryColor);
}

